# vfs

./: .gitignore  CMakeLists.txt  big.txt  small_test.sh  test.cpp  vfs.cpp  vfs.hpp  vfs.sln  vfs.vcxproj  vfs.vcxproj.filters  vfscommon.hpp  vfsfile.cpp  vfsfile.hpp  vfsstructures.cpp  vfsstructures.hpp  vmkdir.cpp  vmkfs.cpp  vmv.cpp
tools/: vcp.cpp  vls.cpp  vmkdir.cpp  vmkfs.cpp  vmv.cpp  vrm.cpp
